<resources>
    <string name="app_name">rostand-visit</string>
    <string name="username">Nom d"\'utilisateur"</string>
    <string name="password">Mot de passe</string>
    <string name="login">Connexion</string>
    <string name="enregistrement">Enregistrement</string>
    <string name="nom">Nom</string>
    <string name="mail">Mail</string>
    <string name="prenom">Prenom</string>
    <string name="etablissement">Etablissement</string>
    <string name="section">Section</string>
    <string name="connexion">Connexion Prof</string>
    <string name="retour">Retour à "l\'accueil"</string>
    <string name="title_activity_login">Retour à "l\'accueil"</string>
    <string name="Diplome">Diplome</string>
    <string name="Option">Option</string>
    <string name="accueil_prof">Accueil</string>
    <string name="progress_detail">Patientez...</string>

    <string-array name="section_choice">
        <item>SLAM</item>
        <item>SISR</item>
    </string-array>
</resources>